option java_package = "com.protocol";
//option java_outer_classname = "AccountPB";
//10001
message CSLoginMain{
	required string accountId 			= 1;
}
message SCLoginMain{
	required string sessionId		= 1;
	required string host			= 2;
	required int32 port				= 3;
}
message CSLogoutMain{
	required string accountId 			= 1;
}
message SCLogoutMain{

}
// 登陆nodeServer
message CSLoginNode{
	required string accountId 			= 1;
	required string sessionId		= 2;
}
message SCLoginNode{

}
